add header & first card

--- a/styles.css
+++ b/styles.css
@@ -1,78 +1,67 @@
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+.header-card {
+    background-color: #1f2937;
+    justify-content: center;
+    padding-bottom: 50px;
+}
+
 .header {
     display: flex;
-    background-color: #1f2937;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
+
+.logo {
     color: #f9faf8;
     font-size: 24px;
 }
 
-ul {
+.links {
     display: flex;
-    list-style: none;
+    gap: 10px;
+    color: #e5e7eb;
     font-size: 18px;
 
 }
 
-.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.hero {
+.card {
     display: flex;
     justify-content: center;
-    background-color: #1f2937;
-    padding:  50px;
-
-    
+    gap: 50px;
 }
 
-.hero-main {
-    width: 500px;
+.card-left, .card-right{
+    width: 400px;
+
+}
+
+.card-right {
+    display: flex;
+    align-content: stretch;
+    background-color: #6D757E;
+}
+
+
+.awesome {
+    color: #f9faf8;
     font-size: 48px;
     font-weight: bolder;
-    color:  #f9faf8;
 }
 
 .sub-awesome {
-    font-size: 18px;
     color: #e5e7eb;
-}
-
-.image-aw {
-    width: 500px;
-}
-
-.random {
-    display: flex;
-    font-size: 36px;
-    font-weight: bolder;
-    color: #1f2937;
-}
-
-.random-box {
-    display: flex;
-}
-
-.inspiring {
-    display: flex;
-    background-color: #e5e7eb;
-    font-size: 36px;
-    color: #1f2937;
-    font-style: italic;
+    font-size: 18px;
 }
 
 button {
-    color: #3882f6;
-}
-
-.action-call {
-    display: flex;
     background-color: #3882f6;
-
+    color: #e5e7eb;
+    border-radius: 5px;
+    width: 40px;
+  
 }
 
-.footer {
-    display: flex;
-}
