--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
 }
 
 .card-left, .card-right{
-    width: 400px;
+    width: 450px;
 
 }
 
@@ -60,8 +60,93 @@
 button {
     background-color: #3882f6;
     color: #e5e7eb;
-    border-radius: 5px;
-    width: 40px;
+    border-radius: 6px;
+    width: 120px;
+    height: 35px;
   
 }
 
+
+.random {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 90px;
+}
+
+
+.random-info {
+    margin: 50px;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+
+
+.image-box {
+    border: 4px solid #3882f6;
+    border-radius: 15px;
+    width: 150px;
+    height: 150px;
+}
+
+.info-box {
+    display: flex;
+    justify-content: center;
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    gap: 50px;
+}
+
+.subtext {
+    color: #7E8590;
+}
+
+.inspiring {
+    display: flex;
+    flex-wrap: wrap;  
+    justify-content: center;
+    background-color: #E5E7EB;
+    font-size: 36px;
+    padding: 90px;
+    color: #1f2937;
+   
+}
+
+.quote {
+    width: 800px; 
+    font-style: italic;
+}
+
+.author {
+    text-align: end;
+    font-style: normal;
+    font-weight: bold;
+}
+
+
+
+.action {
+    display: flex;
+    justify-content: center;
+    margin: 90px;
+}
+
+.call {
+    display: flex;
+    background-color: #3882f6;
+    width: 800px;
+    height: 100px;
+    border-radius: 15px;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+}
+
+.main-call {
+    font-weight: bolder;}
+
+    .second {
+        border: 2px solid white
+    }
