--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,10 @@ img {
     height: 150px;
 }
 
+.boxes {
+    border-radius: 10px;
+}
+
 .info-box {
     display: flex;
     justify-content: center;
@@ -119,6 +123,7 @@ img {
 
 .subtext {
     color: #7E8590;
+    padding: 10px;
 }
 
 .inspiring {
